Fix background bug not fitting whole screen

--- a/app/assets/stylesheets/api/main/main.scss
+++ b/app/assets/stylesheets/api/main/main.scss
@@ -1,4 +1,3 @@
 .body-container {
   background:url(https://i.imgur.com/e31uM1f.jpeg);
-  height: 1000px;
 }
